manifests/apps/open-webui/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: open-webui
  annotations:
    cert-manager.io/cluster-issuer: mainissuer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ai.krea.to`) && PathPrefix(`/api/v1/auths`)
      priority: 20
      middlewares:
        - name: traefik-ratelimit@kubernetescrd
      services:
        - kind: Service
          name: open-webui
          namespace: open-webui
          passHostHeader: true
          port: 1337
          scheme: http
    - kind: Rule
      match: Host(`ai.krea.to`)
      priority: 10
      services:
        - kind: Service
          name: open-webui
          namespace: open-webui
          passHostHeader: true
          port: 1337
          scheme: http
  tls:
    secretName: wildcard-krea.to-tls
    domains:
      - main: ai.krea.to
